Update documentation and structure for integration tutorials and API references

--- a/docs/ode_integration.ipynb
+++ b/docs/ode_integration.ipynb
@@ -1086,22 +1086,26 @@
     "\n",
     "This tutorial covered the key ODE integrators available in BrainTools:\n",
     "\n",
-    "### **Basic Methods:**\n",
+    "**Basic Methods:**\n",
+    "\n",
     "- **Euler**: First-order, simple but less accurate\n",
     "- **RK2/RK3/RK4**: Higher-order methods with better accuracy\n",
     "\n",
-    "### **Advanced Methods:**\n",
+    "**Advanced Methods:**\n",
+    "\n",
     "- **Embedded methods** (RK23, DOPRI5): Automatic error estimation\n",
     "- **Exponential Euler**: Better stability for stiff problems\n",
     "- **SSPRK**: Strong stability preserving properties\n",
     "\n",
-    "### **Key Guidelines:**\n",
+    "**Key Guidelines:**\n",
+    "\n",
     "1. **For most problems**: Use RK4 or DOPRI5\n",
     "2. **For stiff problems**: Try exponential Euler\n",
     "3. **For adaptive stepping**: Use embedded methods with error estimates\n",
     "4. **For efficiency**: Start with RK2 or RK4 depending on accuracy needs\n",
     "\n",
-    "### **BrainTools Features:**\n",
+    "**BrainTools Features:**\n",
+    "\n",
     "- All methods work with JAX PyTrees\n",
     "- Global time step management via `brainstate.environ`\n",
     "- Automatic differentiation compatible\n",
