Refactor documentation for clarity and consistency; update author name and improve tutorial headings

--- a/docs/ode_integration.ipynb
+++ b/docs/ode_integration.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ODE Integration Tutorial\n",
+    "# Ordinary Differential Equation (ODE) Integration Tutorial\n",
     "\n",
     "This tutorial demonstrates how to use the ordinary differential equation (ODE) integrators in BrainTools. We'll cover:\n",
     "\n",
