--- a/docs/sde_integration.ipynb
+++ b/docs/sde_integration.ipynb
@@ -1378,30 +1378,35 @@
     "\n",
     "This tutorial covered the key SDE integrators available in BrainTools:\n",
     "\n",
-    "### **Basic Methods:**\n",
+    "**Basic Methods:**\n",
+    "\n",
     "- **Euler-Maruyama**: Simple, strong order 0.5, weak order 1.0\n",
     "- **Milstein**: Higher accuracy with strong order 1.0\n",
     "- **Exponential Euler**: Better stability for stiff SDEs\n",
     "\n",
-    "### **Advanced Methods:**\n",
+    "**Advanced Methods:**\n",
+    "\n",
     "- **Stochastic Heun**: Predictor-corrector scheme\n",
     "- **Tamed Euler**: Prevents explosion for superlinear growth\n",
     "- **Implicit Euler**: Enhanced stability via fixed-point iteration\n",
     "- **SRK methods**: Stochastic Runge-Kutta for Stratonovich SDEs\n",
     "\n",
-    "### **Key Concepts:**\n",
+    "**Key Concepts:**\n",
+    "\n",
     "- **Itô vs Stratonovich**: Different stochastic calculus interpretations\n",
     "- **Strong vs Weak convergence**: Different measures of accuracy\n",
     "- **Noise handling**: All methods use `brainstate.random` for Gaussian noise\n",
     "\n",
-    "### **Guidelines:**\n",
+    "**Guidelines:**\n",
+    "\n",
     "1. **For most problems**: Use Euler-Maruyama or Milstein\n",
     "2. **For higher accuracy**: Use Milstein (strong order 1.0)\n",
     "3. **For stiff problems**: Try Exponential Euler or Tamed Euler\n",
     "4. **For superlinear growth**: Use Tamed Euler\n",
     "5. **For Stratonovich SDEs**: Consider SRK methods\n",
     "\n",
-    "### **BrainTools Features:**\n",
+    "**BrainTools Features:**\n",
+    "\n",
     "- All methods work with JAX PyTrees\n",
     "- Global time step management via `brainstate.environ`\n",
     "- Consistent random number handling via `brainstate.random`\n",
