Implement functional connectivity dynamics computation; add input validation and tests; update notebook section numbers

--- a/docs/spiking_metrics.ipynb
+++ b/docs/spiking_metrics.ipynb
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Voltage Fluctuation Synchrony\n",
+    "## 4. Voltage Fluctuation Synchrony\n",
     "\n",
     "Generate synthetic membrane potential data and analyze synchrony."
    ]
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Functional Connectivity\n",
+    "## 5. Functional Connectivity\n",
     "\n",
     "Analyze statistical dependencies between neurons using correlation-based connectivity."
    ]
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Comparing Synchrony Measures\n",
+    "## 6. Comparing Synchrony Measures\n",
     "\n",
     "Compare different synchrony measures on the same data."
    ]
