Add advanced spiking metrics tutorial; update index and documentation references

--- a/docs/regression_losses.ipynb
+++ b/docs/regression_losses.ipynb
@@ -245,7 +245,7 @@
     "cd = bt.metric.cosine_distance(v1, v2, epsilon=1e-8)\n",
     "print('Cosine distance:', cd)\n",
     "\n",
-    "# Also available: cosine_similarity (aligned) and pairwise matrix version in bt.metric.cosine_similarity (X,Y)\n",
+    "# Also available: cosine_similarity (aligned) and pairwise matrix version in braintools.metric.cosine_similarity (X,Y)\n",
     "cs_aligned = bt.metric.cosine_similarity(v1, v2)\n",
     "print('Cosine similarity:', cs_aligned)"
    ],
