Add spike encoders and update documentation; include RateEncoder, PoissonEncoder, PopulationEncoder, and more

--- a/docs/spiking_metrics.ipynb
+++ b/docs/spiking_metrics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spiking Metrics (raster, rates, synchrony)\n",
+    "# Spiking Metrics\n",
     "\n",
     "This tutorial demonstrates how to analyze spike train data using `braintools.metric` APIs. We'll cover:\n",
     "\n",
@@ -25,11 +25,12 @@
     }
    },
    "source": [
-    "import jax.numpy as jnp\n",
-    "import numpy as np\n",
-    "import braintools as bt\n",
     "import brainunit as u\n",
+    "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "import braintools\n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(42)"
@@ -73,14 +74,14 @@
     "for t in burst_times:\n",
     "    # Add some jitter around burst time\n",
     "    for i in range(15):\n",
-    "        burst_window = np.arange(max(0, t-5), min(n_timesteps, t+5))\n",
+    "        burst_window = np.arange(max(0, t - 5), min(n_timesteps, t + 5))\n",
     "        if len(burst_window) > 0:\n",
     "            spike_time = np.random.choice(burst_window)\n",
     "            sync_spikes[spike_time, i] = 1.0\n",
     "\n",
     "# Pattern 3: Oscillatory spiking\n",
     "freq = 20  # Hz\n",
-    "phase_offset = np.linspace(0, 2*np.pi, 15)\n",
+    "phase_offset = np.linspace(0, 2 * np.pi, 15)\n",
     "osc_spikes = np.zeros((n_timesteps, 15))\n",
     "for i, phase in enumerate(phase_offset):\n",
     "    oscillation = np.sin(2 * np.pi * freq * times / 1000 + phase)\n",
@@ -128,7 +129,7 @@
    },
    "source": [
     "# Extract raster plot data\n",
-    "neuron_indices, spike_times = bt.metric.raster_plot(spike_matrix, times)\n",
+    "neuron_indices, spike_times = braintools.metric.raster_plot(spike_matrix, times)\n",
     "\n",
     "print(f\"Number of spikes extracted: {len(spike_times)}\")\n",
     "print(f\"Neuron indices range: {neuron_indices.min()} to {neuron_indices.max()}\")\n",
@@ -144,7 +145,8 @@
     "\n",
     "# Add vertical lines to highlight burst times\n",
     "for t in [t * dt.to_decimal(u.ms) for t in burst_times]:\n",
-    "    plt.axvline(t, color='red', linestyle='--', alpha=0.5, label='Burst times' if t == burst_times[0] * dt.to_decimal(u.ms) else '')\n",
+    "    plt.axvline(t, color='red', linestyle='--', alpha=0.5,\n",
+    "                label='Burst times' if t == burst_times[0] * dt.to_decimal(u.ms) else '')\n",
     "\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
@@ -199,9 +201,9 @@
     "medium_window = 5 * u.ms\n",
     "wide_window = 10 * u.ms\n",
     "\n",
-    "rate_narrow = bt.metric.firing_rate(spike_matrix, narrow_window, dt)\n",
-    "rate_medium = bt.metric.firing_rate(spike_matrix, medium_window, dt)\n",
-    "rate_wide = bt.metric.firing_rate(spike_matrix, wide_window, dt)\n",
+    "rate_narrow = braintools.metric.firing_rate(spike_matrix, narrow_window, dt)\n",
+    "rate_medium = braintools.metric.firing_rate(spike_matrix, medium_window, dt)\n",
+    "rate_wide = braintools.metric.firing_rate(spike_matrix, wide_window, dt)\n",
     "\n",
     "print(f\"Rate shapes: {rate_narrow.shape}\")\n",
     "print(f\"Mean rates: {jnp.mean(rate_narrow):.1f}, {jnp.mean(rate_medium):.1f}, {jnp.mean(rate_wide):.1f} Hz\")\n",
@@ -284,17 +286,17 @@
    },
    "source": [
     "# 3.1 Cross-correlation based synchrony\n",
-    "sync_index = bt.metric.cross_correlation(spike_matrix, bin=5.0, dt=dt.to_decimal(u.ms))\n",
+    "sync_index = braintools.metric.cross_correlation(spike_matrix, bin=5.0, dt=dt.to_decimal(u.ms))\n",
     "print(f\"Population synchronization index: {sync_index:.4f}\")\n",
     "\n",
     "# Compare synchrony for different neuron groups\n",
     "random_neurons = spike_matrix[:, :20]  # Random spiking neurons\n",
     "sync_neurons = spike_matrix[:, 20:35]  # Synchronous bursting neurons\n",
-    "osc_neurons = spike_matrix[:, 35:]     # Oscillatory neurons\n",
+    "osc_neurons = spike_matrix[:, 35:]  # Oscillatory neurons\n",
     "\n",
-    "sync_random = bt.metric.cross_correlation(random_neurons, bin=5.0, dt=dt.to_decimal(u.ms))\n",
-    "sync_burst = bt.metric.cross_correlation(sync_neurons, bin=5.0, dt=dt.to_decimal(u.ms))\n",
-    "sync_osc = bt.metric.cross_correlation(osc_neurons, bin=5.0, dt=dt.to_decimal(u.ms))\n",
+    "sync_random = braintools.metric.cross_correlation(random_neurons, bin=5.0, dt=dt.to_decimal(u.ms))\n",
+    "sync_burst = braintools.metric.cross_correlation(sync_neurons, bin=5.0, dt=dt.to_decimal(u.ms))\n",
+    "sync_osc = braintools.metric.cross_correlation(osc_neurons, bin=5.0, dt=dt.to_decimal(u.ms))\n",
     "\n",
     "print(f\"Random group synchrony: {sync_random:.4f}\")\n",
     "print(f\"Burst group synchrony: {sync_burst:.4f}\")\n",
@@ -313,7 +315,7 @@
     "\n",
     "# Add value labels on bars\n",
     "for bar, value in zip(bars, sync_values):\n",
-    "    plt.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.001,\n",
+    "    plt.text(bar.get_x() + bar.get_width() / 2, bar.get_height() + 0.001,\n",
     "             f'{value:.4f}', ha='center', va='bottom')\n",
     "\n",
     "plt.tight_layout()\n",
@@ -389,10 +391,10 @@
     "    sync_signal = jnp.sin(2 * jnp.pi * base_freq * t_volt / 1000 + phase_shift)\n",
     "    noise = np.random.normal(0, 0.2, len(t_volt))\n",
     "    sync_voltages.append(0.8 * sync_signal + 0.2 * noise)\n",
-    "    \n",
+    "\n",
     "    # Asynchronous case: independent oscillations + noise\n",
     "    individual_freq = base_freq + np.random.normal(0, 10)  # Frequency variation\n",
-    "    individual_phase = np.random.uniform(0, 2*np.pi)\n",
+    "    individual_phase = np.random.uniform(0, 2 * np.pi)\n",
     "    async_signal = jnp.sin(2 * jnp.pi * individual_freq * t_volt / 1000 + individual_phase)\n",
     "    noise = np.random.normal(0, 0.3, len(t_volt))\n",
     "    async_voltages.append(0.6 * async_signal + 0.4 * noise)\n",
@@ -401,8 +403,8 @@
     "async_voltage_matrix = jnp.array(async_voltages).T\n",
     "\n",
     "# Calculate voltage fluctuation synchrony\n",
-    "sync_index_volt_sync = bt.metric.voltage_fluctuation(sync_voltage_matrix)\n",
-    "sync_index_volt_async = bt.metric.voltage_fluctuation(async_voltage_matrix)\n",
+    "sync_index_volt_sync = braintools.metric.voltage_fluctuation(sync_voltage_matrix)\n",
+    "sync_index_volt_async = braintools.metric.voltage_fluctuation(async_voltage_matrix)\n",
     "\n",
     "print(f\"Voltage synchrony (synchronized): {sync_index_volt_sync:.4f}\")\n",
     "print(f\"Voltage synchrony (asynchronous): {sync_index_volt_async:.4f}\")\n",
@@ -454,7 +456,7 @@
     "\n",
     "# Add value labels\n",
     "for bar, value in zip(bars, sync_indices):\n",
-    "    plt.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.05,\n",
+    "    plt.text(bar.get_x() + bar.get_width() / 2, bar.get_height() + 0.05,\n",
     "             f'{value:.3f}', ha='center', va='bottom')\n",
     "\n",
     "plt.axhline(y=1.0, color='black', linestyle='--', alpha=0.5, label='No synchrony (χ² = 1)')\n",
@@ -522,10 +524,10 @@
     "# Convert spikes to firing rates for connectivity analysis\n",
     "window_size = 10  # Bin size for rate calculation\n",
     "n_bins = n_timesteps // window_size\n",
-    "binned_rates = spike_matrix[:n_bins*window_size].reshape(n_bins, window_size, n_neurons).sum(axis=1)\n",
+    "binned_rates = spike_matrix[:n_bins * window_size].reshape(n_bins, window_size, n_neurons).sum(axis=1)\n",
     "\n",
     "# Compute functional connectivity matrix\n",
-    "fc_matrix = bt.metric.functional_connectivity(binned_rates)\n",
+    "fc_matrix = braintools.metric.functional_connectivity(binned_rates)\n",
     "\n",
     "print(f\"Functional connectivity matrix shape: {fc_matrix.shape}\")\n",
     "print(f\"Connectivity range: {jnp.min(fc_matrix):.3f} to {jnp.max(fc_matrix):.3f}\")\n",
@@ -543,8 +545,8 @@
     "\n",
     "# Add group boundaries\n",
     "for boundary in [20, 35]:\n",
-    "    plt.axhline(boundary-0.5, color='white', linewidth=2)\n",
-    "    plt.axvline(boundary-0.5, color='white', linewidth=2)\n",
+    "    plt.axhline(boundary - 0.5, color='white', linewidth=2)\n",
+    "    plt.axvline(boundary - 0.5, color='white', linewidth=2)\n",
     "\n",
     "# Within-group connectivity (bursting neurons)\n",
     "plt.subplot(2, 2, 2)\n",
@@ -574,8 +576,8 @@
     "plt.xlabel('Correlation Coefficient')\n",
     "plt.ylabel('Density')\n",
     "plt.title('Distribution of Pairwise Correlations')\n",
-    "plt.axvline(jnp.mean(connectivity_values), color='red', linestyle='--', \n",
-    "           label=f'Mean: {jnp.mean(connectivity_values):.3f}')\n",
+    "plt.axvline(jnp.mean(connectivity_values), color='red', linestyle='--',\n",
+    "            label=f'Mean: {jnp.mean(connectivity_values):.3f}')\n",
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
@@ -664,7 +666,7 @@
     "cross_corr_values = []\n",
     "\n",
     "for bin_size in bin_sizes:\n",
-    "    sync_val = bt.metric.cross_correlation(spike_matrix, bin=bin_size, dt=dt.to_decimal(u.ms))\n",
+    "    sync_val = braintools.metric.cross_correlation(spike_matrix, bin=bin_size, dt=dt.to_decimal(u.ms))\n",
     "    cross_corr_values.append(sync_val)\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
@@ -682,7 +684,7 @@
     "rate_variability = []\n",
     "\n",
     "for window in smoothing_windows:\n",
-    "    rate = bt.metric.firing_rate(spike_matrix, window, dt)\n",
+    "    rate = braintools.metric.firing_rate(spike_matrix, window, dt)\n",
     "    # Calculate coefficient of variation\n",
     "    cv = jnp.std(rate) / jnp.mean(rate)\n",
     "    rate_variability.append(cv)\n",
@@ -705,9 +707,9 @@
     "for start_idx in range(0, n_timesteps - window_duration, step_size):\n",
     "    end_idx = start_idx + window_duration\n",
     "    window_spikes = spike_matrix[start_idx:end_idx, :]\n",
-    "    \n",
+    "\n",
     "    if jnp.sum(window_spikes) > 0:  # Only analyze if there are spikes\n",
-    "        sync_val = bt.metric.cross_correlation(window_spikes, bin=5.0, dt=dt.to_decimal(u.ms))\n",
+    "        sync_val = braintools.metric.cross_correlation(window_spikes, bin=5.0, dt=dt.to_decimal(u.ms))\n",
     "        time_resolved_sync.append(sync_val)\n",
     "        time_centers.append((start_idx + end_idx) / 2 * dt.to_decimal(u.ms))\n",
     "\n",
