Refine tutorial titles in classification and LFP analysis notebooks

--- a/docs/lfp_analysis.ipynb
+++ b/docs/lfp_analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Local Field Potential (LFP) Analysis with BrainTools\n",
+    "# Local Field Potential (LFP) Analysis\n",
     "\n",
-    "This tutorial demonstrates comprehensive LFP analysis using the braintools.metric module. We'll cover:\n",
+    "This tutorial demonstrates comprehensive LFP analysis using the ``braintools.metric`` module. We'll cover:\n",
     "\n",
     "1. **LFP Generation** - Converting spike trains to LFP signals\n",
     "2. **Power Spectral Analysis** - Frequency domain characterization\n",
