--- a/docs/classification_losses.ipynb
+++ b/docs/classification_losses.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification Losses (binary, multiclass, focal, smoothing)\n",
+    "# Classification Losses\n",
     "\n",
     "This tutorial introduces the core classification losses in `braintools.metric` and how to pick and use them effectively:\n",
     "\n",
