Refactor figure generation function and update tutorial names for clarity

--- a/docs/spiking_sync.ipynb
+++ b/docs/spiking_sync.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Spiking Synchronization Metrics\n",
+    "# Spiking Synchronization Metrics\n",
     "\n",
     "This tutorial demonstrates advanced spike train analysis functions in `braintools.metric`. We'll cover:\n",
     "\n",
