Update changelog, enhance README with citation info, and refine spike encoding tutorial

--- a/docs/spike_encoding.ipynb
+++ b/docs/spike_encoding.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spike Encoding Methods in BrainTools\n",
+    "# Spike Encoding Methods\n",
     "\n",
-    "This tutorial demonstrates the comprehensive spike encoding capabilities available in braintools._others.spike_encoder. We'll cover:\n",
+    "This tutorial demonstrates the comprehensive spike encoding capabilities available in ``braintools``. We'll cover:\n",
     "\n",
     "1. **Latency Encoding** - Time-to-first-spike coding\n",
     "2. **Rate Encoding** - Firing rate proportional to input intensity\n",
