Update NevergradOptimizer tutorial by removing section anchors for improved readability

--- a/docs/nevergrad_optimizer.ipynb
+++ b/docs/nevergrad_optimizer.ipynb
@@ -8,19 +8,7 @@
     "\n",
     "This tutorial demonstrates how to use the `NevergradOptimizer` from BrainTools for black-box optimization problems. The NevergradOptimizer is a powerful wrapper around the [Nevergrad](https://github.com/facebookresearch/nevergrad) library that provides batched evaluation support and seamless integration with JAX and BrainUnit.\n",
     "\n",
-    "## Table of Contents\n",
-    "\n",
-    "1. [Introduction and Setup](#introduction)\n",
-    "2. [Basic Usage: Scalar Optimization](#basic-scalar)\n",
-    "3. [Multi-dimensional Parameter Optimization](#multi-dimensional)\n",
-    "4. [Named Parameters with Dictionary Bounds](#named-parameters)\n",
-    "5. [Working with BrainUnit Quantities](#brainunit)\n",
-    "6. [Different Optimization Methods](#methods)\n",
-    "7. [Neural Network Hyperparameter Tuning](#neural-network)\n",
-    "8. [Advanced Features](#advanced)\n",
-    "9. [Best Practices and Tips](#best-practices)\n",
-    "\n",
-    "## Introduction and Setup {#introduction}\n",
+    "## Introduction and Setup\n",
     "\n",
     "The `NevergradOptimizer` is designed for derivative-free optimization where gradients are unavailable or unreliable. It's particularly useful for:\n",
     "- Hyperparameter optimization\n",
@@ -108,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Usage: Scalar Optimization {#basic-scalar}\n",
+    "## Basic Usage: Scalar Optimization\n",
     "\n",
     "Let's start with a simple example: optimizing a basic quadratic function with two scalar parameters."
    ]
@@ -284,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multi-dimensional Parameter Optimization {#multi-dimensional}\n",
+    "## Multi-dimensional Parameter Optimization\n",
     "\n",
     "The NevergradOptimizer can handle multi-dimensional parameters (arrays) as well as scalars. Let's optimize a function with array parameters."
    ]
@@ -524,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Named Parameters with Dictionary Bounds {#named-parameters}\n",
+    "## Named Parameters with Dictionary Bounds\n",
     "\n",
     "For better organization, especially with many parameters, you can use dictionary bounds to give meaningful names to your parameters."
    ]
@@ -747,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Working with BrainUnit Quantities {#brainunit}\n",
+    "## Working with BrainUnit Quantities\n",
     "\n",
     "The NevergradOptimizer seamlessly integrates with BrainUnit quantities, allowing you to optimize parameters with physical units."
    ]
@@ -970,7 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Different Optimization Methods {#methods}\n",
+    "## Different Optimization Methods\n",
     "\n",
     "The NevergradOptimizer supports many different optimization algorithms. Let's compare a few of them on the same problem."
    ]
@@ -1178,7 +1166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Neural Network Hyperparameter Tuning {#neural-network}\n",
+    "## Neural Network Hyperparameter Tuning\n",
     "\n",
     "Let's see a more realistic example: optimizing hyperparameters for a simple neural network on a classification task."
    ]
@@ -1468,7 +1456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced Features {#advanced}\n",
+    "## Advanced Features\n",
     "\n",
     "Let's explore some advanced features of the NevergradOptimizer."
    ]
@@ -1780,7 +1768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Best Practices and Tips {#best-practices}\n",
+    "## Best Practices and Tips\n",
     "\n",
     "Here are some best practices for using the NevergradOptimizer effectively:"
    ]
