Add input current section and update animation tutorial content

--- a/docs/animation_and_dynamics.ipynb
+++ b/docs/animation_and_dynamics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Animation and Dynamics Tutorial\n",
+    "# Animation and Dynamics\n",
     "\n",
     "This comprehensive tutorial demonstrates how to create dynamic visualizations and animations of neural data using BrainTools. We'll explore techniques for visualizing temporal evolution, creating movies of network dynamics, and optimizing performance for large datasets.\n",
     "\n",
@@ -17,20 +17,7 @@
     "- Visualize learning processes through time-lapse animations\n",
     "- Display dynamic changes in connectivity patterns\n",
     "- Export animations in various video formats\n",
-    "- Optimize performance for large-scale temporal datasets\n",
-    "\n",
-    "## Table of Contents\n",
-    "\n",
-    "1. [Setup and Imports](#setup)\n",
-    "2. [Basic Animation Techniques](#basic)\n",
-    "3. [Neural Activity Animation](#neural-activity)\n",
-    "4. [1D Signal Animation](#1d-animation)\n",
-    "5. [2D Spatial Animation](#2d-animation)\n",
-    "6. [Network Dynamics Movies](#network-dynamics)\n",
-    "7. [Learning Process Visualization](#learning)\n",
-    "8. [Dynamic Connectivity](#connectivity)\n",
-    "9. [Export and Optimization](#export)\n",
-    "10. [Advanced Techniques](#advanced)"
+    "- Optimize performance for large-scale temporal datasets"
    ]
   },
   {
@@ -44,17 +31,14 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "import time\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "# Import required libraries\n",
     "import numpy as np\n",
     "from IPython.display import HTML, display\n",
     "from matplotlib.animation import FuncAnimation, PillowWriter, FFMpegWriter\n",
     "\n",
-    "# Import braintools visualization functions\n",
-    "from braintools.visualize.animation import animator\n",
+    "import braintools\n",
     "\n",
     "# Set up output directory\n",
     "output_dir = Path('animations')\n",
@@ -69,13 +53,7 @@
     "rc('animation', html='jshtml')\n",
     "\n",
     "# Set random seed\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "print(\"BrainTools Animation and Dynamics Tutorial\")\n",
-    "print(\"==========================================\")\n",
-    "print(f\"Output directory: {output_dir.absolute()}\")\n",
-    "print(f\"Matplotlib version: {plt.matplotlib.__version__}\")\n",
-    "print(\"\\nNote: Animations may take a moment to render in the notebook.\")"
+    "np.random.seed(42)"
    ],
    "outputs": [],
    "execution_count": null
@@ -609,19 +587,19 @@
     "# Create animations using braintools animator\n",
     "ax1 = axes[0, 0]\n",
     "ax1.set_title('Traveling Wave')\n",
-    "anim1 = animator(wave_data, fig, ax1, interval=50, cmap='viridis')\n",
+    "anim1 = braintools.visualize.animator(wave_data, fig, ax1, interval=50, cmap='viridis')\n",
     "\n",
     "ax2 = axes[0, 1]\n",
     "ax2.set_title('Rotating Spiral')\n",
-    "anim2 = animator(spiral_data, fig, ax2, interval=50, cmap='plasma')\n",
+    "anim2 = braintools.visualize.animator(spiral_data, fig, ax2, interval=50, cmap='plasma')\n",
     "\n",
     "ax3 = axes[1, 0]\n",
     "ax3.set_title('Spreading Activation')\n",
-    "anim3 = animator(spread_data, fig, ax3, interval=50, cmap='hot')\n",
+    "anim3 = braintools.visualize.animator(spread_data, fig, ax3, interval=50, cmap='hot')\n",
     "\n",
     "ax4 = axes[1, 1]\n",
     "ax4.set_title('Dynamic Hotspots')\n",
-    "anim4 = animator(hotspot_data, fig, ax4, interval=50, cmap='jet')\n",
+    "anim4 = braintools.visualize.animator(hotspot_data, fig, ax4, interval=50, cmap='jet')\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
@@ -1395,26 +1373,7 @@
     "| GIF | Pillow | Web, Email | Universal support | Large files |\n",
     "| MP4 | FFMpeg | Presentations | Small, high quality | Requires FFMpeg |\n",
     "| HTML | JavaScript | Notebooks | Interactive | Large, needs browser |\n",
-    "| Frames | ImageMagick | Post-processing | Full control | Very large |\n",
-    "\n",
-    "Performance Tips:\n",
-    "\n",
-    "1. **Use Blitting**: Set `blit=True` for 2-5x speedup\n",
-    "2. **Decimate Data**: Downsample large datasets\n",
-    "3. **Cache Frames**: Pre-compute expensive operations\n",
-    "4. **Reduce Artists**: Minimize number of plot elements\n",
-    "5. **Memory Management**: Clear figures, use generators\n",
-    "\n",
-    "Best Practices:\n",
-    "\n",
-    "- Choose appropriate frame rate (10-30 fps)\n",
-    "- Keep animations focused on key features\n",
-    "- Add time indicators and labels\n",
-    "- Use consistent color schemes\n",
-    "- Test export formats for target platform\n",
-    "- Optimize for file size vs. quality trade-offs\n",
-    "\n",
-    "The animation capabilities in BrainTools enable dynamic visualization of complex temporal neural processes, making it easier to understand and communicate time-varying phenomena in neuroscience."
+    "| Frames | ImageMagick | Post-processing | Full control | Very large |"
    ]
   }
  ],
