rename doc tile

--- a/docs/input_tutorial_04_custom_pipelines.ipynb
+++ b/docs/input_tutorial_04_custom_pipelines.ipynb
@@ -5,7 +5,7 @@
    "id": "7e406f66",
    "metadata": {},
    "source": [
-    "# Custom Transformations and Pipelines\n",
+    "# Tutorial 4: Custom Transformations and Pipelines\n",
     "\n",
     "Create bespoke inputs by extending `Input`, wrapping functional helpers, and composing reusable building blocks."
    ]
