Refactor input generation methods to use a consistent naming convention

--- a/docs/input_tutorial_04_custom_pipelines.ipynb
+++ b/docs/input_tutorial_04_custom_pipelines.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "id": "45db7043",
    "metadata": {},
-   "source": "When you need input patterns that aren't available in the built-in classes, you can create your own by subclassing `Input`. The key is implementing the `_generate()` method, which returns the actual current values."
+   "source": "When you need input patterns that aren't available in the built-in classes, you can create your own by subclassing `Input`. The key is implementing the `generate()` method, which returns the actual current values."
   },
   {
    "cell_type": "code",
@@ -68,7 +68,7 @@
     "        self.slope = slope\n",
     "        self.center = center\n",
     "\n",
-    "    def _generate(self):\n",
+    "    def generate(self):\n",
     "        dt = brainstate.environ.get_dt()\n",
     "        dt_value, time_unit = u.split_mantissa_unit(dt)\n",
     "        total = u.Quantity(self.duration).to(time_unit).mantissa\n",
@@ -449,7 +449,7 @@
     "        self.amplitude = amplitude\n",
     "        self.tau = time_constant\n",
     "\n",
-    "    def _generate(self):\n",
+    "    def generate(self):\n",
     "        dt = brainstate.environ.get_dt()\n",
     "        dt_value, time_unit = u.split_mantissa_unit(dt)\n",
     "        total = u.Quantity(self.duration).to(time_unit).mantissa\n",
@@ -537,7 +537,24 @@
   {
    "cell_type": "markdown",
    "id": "53viw4bi389",
-   "source": "## Summary\n\nIn this tutorial, you've learned how to:\n\n1. **Subclass `Input`**: Create completely new input types by implementing `_generate()`\n2. **Wrap functions**: Modify existing functional helpers with decorators and wrappers\n3. **Build pipelines**: Combine multiple inputs into complex, reusable protocols\n4. **Follow best practices**: Handle units properly, make code reusable, and document components\n\nThese techniques allow you to create sophisticated experimental protocols tailored to your specific research needs. The composable nature of BrainTools inputs means you can mix and match these approaches to build exactly the stimulation patterns your experiments require.\n\n### Key Takeaways:\n- Custom `Input` classes are perfect for novel waveform shapes\n- Wrapper functions are ideal for modifying existing behaviors  \n- Pipeline factories provide flexibility for different experimental conditions\n- Always consider units, reusability, and documentation in your custom code",
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this tutorial, you've learned how to:\n",
+    "\n",
+    "1. **Subclass `Input`**: Create completely new input types by implementing `generate()`\n",
+    "2. **Wrap functions**: Modify existing functional helpers with decorators and wrappers\n",
+    "3. **Build pipelines**: Combine multiple inputs into complex, reusable protocols\n",
+    "4. **Follow best practices**: Handle units properly, make code reusable, and document components\n",
+    "\n",
+    "These techniques allow you to create sophisticated experimental protocols tailored to your specific research needs. The composable nature of BrainTools inputs means you can mix and match these approaches to build exactly the stimulation patterns your experiments require.\n",
+    "\n",
+    "### Key Takeaways:\n",
+    "- Custom `Input` classes are perfect for novel waveform shapes\n",
+    "- Wrapper functions are ideal for modifying existing behaviors  \n",
+    "- Pipeline factories provide flexibility for different experimental conditions\n",
+    "- Always consider units, reusability, and documentation in your custom code"
+   ],
    "metadata": {}
   }
  ],
