Rename optimization tutorials for clarity and consistency in naming

--- a/docs/optim_tutorial_01_nevergrad_optimizer.ipynb
+++ b/docs/optim_tutorial_01_nevergrad_optimizer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `NevergradOptimizer` Tutorial\n",
+    "# Tutorial 1: `NevergradOptimizer` Tutorial\n",
     "\n",
     "This tutorial demonstrates how to use the `NevergradOptimizer` from BrainTools for black-box optimization problems. The NevergradOptimizer is a powerful wrapper around the [Nevergrad](https://github.com/facebookresearch/nevergrad) library that provides batched evaluation support and seamless integration with JAX and BrainUnit.\n",
     "\n",
