--- a/docs/optim_tutorial_02_scipy_optimizer.ipynb
+++ b/docs/optim_tutorial_02_scipy_optimizer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ``ScipyOptimizer`` Tutorial\n",
+    "# Tutorial 2: ``ScipyOptimizer`` Tutorial\n",
     "\n",
     "This tutorial demonstrates how to use the `ScipyOptimizer` from BrainTools for gradient-based optimization. The ScipyOptimizer provides a convenient wrapper around SciPy's optimization methods with automatic differentiation via JAX, support for complex parameter structures, and seamless integration with BrainUnit quantities."
    ]
