Update installation instructions and enhance .mat file loading: add CUDA 13 support and improve readability

--- a/docs/conn_tutorial_01_fundamentals.ipynb
+++ b/docs/conn_tutorial_01_fundamentals.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Tutorial 1 · Basic Connectivity Patterns\n",
+    "# Tutorial 1: Basic Connectivity Patterns\n",
     "\n",
     "**Duration:** 15–20 minutes · **Level:** Beginner\n",
     "\n",
