Rename tutorial notebooks for consistency and clarity: update titles and table of contents

--- a/docs/metric_tutorial_01_classification_losses.ipynb
+++ b/docs/metric_tutorial_01_classification_losses.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification Losses\n",
+    "# Tutorial 1: Classification Losses\n",
     "\n",
     "This tutorial introduces the core classification losses in `braintools.metric` and how to pick and use them effectively:\n",
     "\n",
