--- a/docs/metric_tutorial_02_regression_losses.ipynb
+++ b/docs/metric_tutorial_02_regression_losses.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression Losses\n",
+    "# Tutorial 2: Regression Losses\n",
     "\n",
     "This tutorial shows how to use core regression losses in `braintools.metric` and when to choose each:\n",
     "\n",
