--- a/docs/metric_tutorial_03_ranking_learning_to_rank.ipynb
+++ b/docs/metric_tutorial_03_ranking_learning_to_rank.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ranking for Learning-to-Rank\n",
+    "# Tutorial 3: Ranking for Learning-to-Rank\n",
     "\n",
     "This tutorial shows how to use the listwise ranking loss in `braintools.metric`\n",
     "with masking and reduction options. It is suited for information retrieval,\n",
