--- a/docs/metric_tutorial_04_pairwise_embedding_similarity.ipynb
+++ b/docs/metric_tutorial_04_pairwise_embedding_similarity.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pairwise & Embedding Similarity\n\n",
-    "This tutorial covers two cosine-similarity APIs in `braintools.metric`:\n\n",
+    "# Tutorial 4: Pairwise & Embedding Similarity\n",
+    "\n",
+    "This tutorial covers two cosine-similarity APIs in `braintools.metric`:\n",
+    "\n",
     "- Aligned embeddings:\n",
     "  - `bt.metric.cosine_similarity(predictions, targets)` → per-pair similarity (…,)\n",
     "  - `bt.metric.cosine_distance(predictions, targets)`   → 1 − similarity (…,)\n",
     "- Pairwise similarity matrix:\n",
-    "  - `pairwise_cosine_similarity(X, Y=None)` → (n, m) matrix (X vs Y) or (n, n) if Y is None\n\n",
+    "  - `pairwise_cosine_similarity(X, Y=None)` → (n, m) matrix (X vs Y) or (n, n) if Y is None\n",
+    "\n",
     "Note: both functions are named `cosine_similarity` internally; in the public namespace, the\n",
     "aligned version (`predictions, targets`) is bound to `bt.metric.cosine_similarity`. To access\n",
     "the pairwise (matrix) variant, import it explicitly as shown below."
