--- a/docs/metric_tutorial_05_spiking_metrics.ipynb
+++ b/docs/metric_tutorial_05_spiking_metrics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spiking Metrics\n",
+    "# Tutorial 5: Spiking Metrics\n",
     "\n",
     "This tutorial demonstrates how to analyze spike train data using `braintools.metric` APIs. We'll cover:\n",
     "\n",
