--- a/docs/metric_tutorial_07_lfp_analysis.ipynb
+++ b/docs/metric_tutorial_07_lfp_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Local Field Potential (LFP) Analysis\n",
+    "# Tutorial 7: Local Field Potential (LFP) Analysis\n",
     "\n",
     "This tutorial demonstrates comprehensive LFP analysis using the ``braintools.metric`` module. We'll cover:\n",
     "\n",
