--- a/docs/metric_tutorial_06_spiking_sync.ipynb
+++ b/docs/metric_tutorial_06_spiking_sync.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spiking Synchronization Metrics\n",
+    "# Tutorial 6: Spiking Synchronization Metrics\n",
     "\n",
     "This tutorial demonstrates advanced spike train analysis functions in `braintools.metric`. We'll cover:\n",
     "\n",
