Rename visualization tutorials for consistency: standardize titles to improve clarity

--- a/docs/vis_tutorial_01_neural_data_visualization.ipynb
+++ b/docs/vis_tutorial_01_neural_data_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization Tutorial 1: Neural Data Visualization\n",
+    "# Tutorial 1: Neural Data Visualization\n",
     "\n",
     "This tutorial demonstrates the core neural data visualization functions in BrainTools. We'll explore how to visualize spike trains, population activity, connectivity patterns, and other essential neural data representations.\n",
     "\n",
