--- a/docs/vis_tutorial_05_interactive_visualization.ipynb
+++ b/docs/vis_tutorial_05_interactive_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization Tutorial 5: Interactive Visualization with ``Plotly``\n",
+    "# Tutorial 5: Interactive Visualization with ``Plotly``\n",
     "\n",
     "This tutorial demonstrates how to create interactive visualizations using the `braintools.visualize` module with Plotly backend. We'll cover:\n",
     "\n",
