--- a/docs/vis_tutorial_07_styling_and_themes.ipynb
+++ b/docs/vis_tutorial_07_styling_and_themes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization Tutorial 7: Visualization Styling and Themes\n",
+    "# Tutorial 7: Visualization Styling and Themes\n",
     "\n",
     "This comprehensive tutorial demonstrates how to create publication-ready figures with BrainTools' styling and theming capabilities. We'll explore neural-specific styles, colorblind-friendly palettes, custom colormaps, and export optimization techniques.\n",
     "\n",
