--- a/docs/vis_tutorial_04_model_evaluation_plots.ipynb
+++ b/docs/vis_tutorial_04_model_evaluation_plots.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization Tutorial 4: Model Evaluation Plots\n",
+    "# Tutorial 4: Model Evaluation Plots\n",
     "\n",
     "This tutorial demonstrates how to create comprehensive model evaluation visualizations using the `braintools.visualize` module. We'll cover:\n",
     "\n",
