Rename animation and dynamics tutorial for consistency: update title and add to table of contents

--- a/docs/vis_tutorial_08_animation_and_dynamics.ipynb
+++ b/docs/vis_tutorial_08_animation_and_dynamics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Animation and Dynamics\n",
+    "# Tutorial 8: Animation and Dynamics\n",
     "\n",
     "This comprehensive tutorial demonstrates how to create dynamic visualizations and animations of neural data using BrainTools. We'll explore techniques for visualizing temporal evolution, creating movies of network dynamics, and optimizing performance for large datasets.\n",
     "\n",
